[package]
name = "nomad"
description = "A HashiCorp Nomad's HTTP API client"
version = "0.2.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/rushmorem/nomad"
documentation = "https://docs.rs/nomad"
readme = "README.md"
keywords = ["scheduler"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.2"
